# logging-sink

./: README.rst  pyproject.toml
src/logging_sink/: __init__.py
